[NOID] Revert "[s7Ob7Zm7] Test that all load and import procedures respect security (#360)"
This reverts commit ecec458e39e51b8f2e2dca7218b19afdf01c94ac.