@@ -7,7 +7,7 @@ import apoc.export.graphml.ExportGraphML;
 import apoc.export.json.ExportJson;
 import apoc.util.FileUtils;
 import apoc.util.TestUtil;
-import com.nimbusds.jose.util.Pair;
+import junit.framework.TestCase;
 import org.junit.Assert;
 import org.junit.BeforeClass;
 import org.junit.ClassRule;
@@ -16,7 +16,9 @@ import org.junit.experimental.runners.Enclosed;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.neo4j.configuration.GraphDatabaseSettings;
+import org.neo4j.graphdb.GraphDatabaseService;
 import org.neo4j.graphdb.QueryExecutionException;
+import org.neo4j.graphdb.Result;
 import org.neo4j.test.rule.DbmsRule;
 import org.neo4j.test.rule.ImpermanentDbmsRule;
 
@@ -29,25 +31,17 @@ import java.util.Map;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-import static apoc.export.SecurityTestUtil.ERROR_KEY;
-import static apoc.export.SecurityTestUtil.EXPORT_PROCEDURES;
-import static apoc.export.SecurityTestUtil.PROCEDURE_KEY;
-import static apoc.export.SecurityTestUtil.assertPathTraversalError;
-import static apoc.export.SecurityTestUtil.getApocProcedure;
-import static apoc.export.SecurityTestUtil.setExportFileApocConfigs;
 import static apoc.util.TestUtil.assertError;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 @RunWith(Enclosed.class)
 public class ExportCoreSecurityTest {
+
     private static final File directory = new File("target/import");
     private static final File directoryWithSamePrefix = new File("target/imported");
     private static final File subDirectory = new File("target/import/tests");
     private static final List<String> APOC_EXPORT_PROCEDURE_NAME = Arrays.asList("csv", "json", "graphml", "cypher");
-
-    public static final String FILENAME = "my-test.txt";
-    public static final String PARAM_NAMES = "Procedure: {0}.{1}, fileName: {3}";
-
 
     static {
         //noinspection ResultOfMethodCallIgnored
@@ -65,291 +59,411 @@ public class ExportCoreSecurityTest {
     @BeforeClass
     public static void setUp() {
         TestUtil.registerProcedure(db, ExportCSV.class, ExportJson.class, ExportGraphML.class, ExportCypher.class);
+        setFileExport(false);
     }
 
     public static void setFileExport(boolean allowed) {
         ApocConfig.apocConfig().setProperty(ApocConfig.APOC_EXPORT_FILE_ENABLED, allowed);
     }
 
-    private static List<Object[]> getParameterData(List<Pair<String, Consumer<Map>>> fileAndErrors) {
-        return getParameterData(fileAndErrors, EXPORT_PROCEDURES, APOC_EXPORT_PROCEDURE_NAME);
+    private static Collection<String[]> data(Map<String, List<String>> apocProcedureArguments) {
+        return data(apocProcedureArguments, APOC_EXPORT_PROCEDURE_NAME);
     }
 
-    public static List<Object[]> getParameterData(List<Pair<String, Consumer<Map>>> fileAndErrors, List<Pair<String, String>> importAndLoadProcedures, List<String> procedureNames) {
-        // from a stream of fileNames and a List of Pair<procName, procArgs>
-        // returns a List of String[]{ procName, procArgs, fileName }
-        return fileAndErrors.stream()
-                .flatMap(fileName -> importAndLoadProcedures
+    public static Collection<String[]> data(Map<String, List<String>> apocProcedureArguments, List<String> procedureNames) {
+        return procedureNames
+                .stream()
+                .flatMap(method -> apocProcedureArguments
+                        .entrySet()
                         .stream()
-                        .flatMap(procPair -> procedureNames
+                        .flatMap(e -> e.getValue()
                                 .stream()
-                                .map(procName ->
-                                        new Object[] { procName, procPair.getLeft(), procPair.getRight(), fileName.getLeft(), fileName.getRight() }
-                                )
-                        )
-                ).toList();
+                                .map(a -> new String[]{method, e.getKey(), a})))
+                .collect(Collectors.toList());
     }
 
-    /**
-     * These test with `apoc.import.file.use_neo4j_config=true`
-     * should fail because they access a directory which isn't the configured directory
-     */
     @RunWith(Parameterized.class)
-    public static class TestIllegalExternalFSAccess {
-
-        // these 2 consumers accept a Map.of("error", <errorMsg>, "procedure", <procedureQuery>)
-        public static final Consumer<Map> EXCEPTION_OUTDIR_CONSUMER = (Map e) -> assertError(
-                (Exception) e.get(ERROR_KEY), FileUtils.ACCESS_OUTSIDE_DIR_ERROR, IOException.class, (String) e.get(PROCEDURE_KEY)
-        );
-        public static final Consumer<Map> EXCEPTION_NOT_FOUND_CONSUMER = (Map e) -> assertTrue(
-                ((Exception) e.get(ERROR_KEY)).getMessage().contains("test.txt (No such file or directory)")
-        );
-
+    public static class TestIllegalFSAccess {
         private final String apocProcedure;
-        private final String fileName;
-        private final Consumer consumer;
 
-        public TestIllegalExternalFSAccess(String exportMethod, String exportMethodType, String exportMethodArguments,
-                                           String fileName,
-                                           Consumer consumer) {
+        public TestIllegalFSAccess(String exportMethod, String exportMethodType, String exportMethodArguments) {
             this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
-            this.fileName = fileName;
-            this.consumer = consumer;
         }
 
-        /*
-         * These test cases attempt to access a directory with the same prefix as the import directory. This is design to
-         * test "directoryName.startsWith" logic which is a common path traversal bug.
-         * All these tests should fail because they access a directory which isn't the configured directory
-         */
-        private static final String case1 = "../imported/" + FILENAME;
-        private static final String case2 = "tests/../../imported/" + FILENAME;
-        private static final String case3 = "../" + FILENAME;
-        private static final String case4 = "file:../" + FILENAME;
-        private static final String case5 = "file:..//" + FILENAME;
+        private static final Map<String, List<String>> APOC_PROCEDURE_ARGUMENTS = Map.of(
+                "query", List.of(
+                        "\"RETURN 'hello' as key\", './hello', {}",
+                        "\"RETURN 'hello' as key\", './hello', {stream:true}",
+                        "\"RETURN 'hello' as key\", '  ', {}"
+                ),
+                "all", List.of(
+                        "'./hello', {}",
+                        "'./hello', {stream:true}",
+                        "'  ', {}"
+                ),
+                "data", List.of(
+                        "[], [], './hello', {}",
+                        "[], [], './hello', {stream:true}",
+                        "[], [], '  ', {}"
+                ),
+                "graph", List.of(
+                        "{nodes: [], relationships: []}, './hello', {}",
+                        "{nodes: [], relationships: []}, './hello', {stream:true}",
+                        "{nodes: [], relationships: []}, '  ', {}"
+                )
+        );
 
-        // non-failing cases, with apoc.import.file.use_neo4j_config=false
-        public static final List<String> casesAllowed = Arrays.asList(case3, case4, case5);
-
-        private static final String case16 = "file:///%2e%2e%2f%2f%2e%2e%2f%2f%2e%2e%2f%2f%2e%2e%2f%2fapoc/" + FILENAME;
-        public static final String case26 = "file:///%2e%2e%2f%2f" + FILENAME;
-        private static final String case46 = "tests/../../" + FILENAME;
-        private static final String case56 = "tests/..//..//" + FILENAME;
-
-        public static final List<String> casesOutsideDir = Arrays.asList(case1, case2, case3, case4, case5,
-                case16, case26, case46, case56);
-
-        /*
-         All of these will resolve to a local path after normalization which will point to
-         a non-existing directory in our import folder: /apoc. Causing them to error that is
-         not found. They all attempt to exit the import folder back to the apoc folder:
-         Directory Layout: .../apoc/core/target/import
-         */
-        private static final String case111 = "file://%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f/apoc/" + FILENAME;
-        private static final String case211 = "file://../../../../apoc/" + FILENAME;
-        private static final String case311 = "file:///..//..//..//..//apoc//core//..//" + FILENAME;
-        private static final String case411 = "file:///..//..//..//..//apoc/" + FILENAME;
-        private static final String case511 = "file://" + directory.getAbsolutePath() + "//..//..//..//..//apoc/" + FILENAME;
-        private static final String case611 = "file:///%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f/apoc/" + FILENAME;
-
-        public static final List<String> casesNotExistingDir = Arrays.asList(case111, case211, case311, case411, case511, case611);
-
-        public static List<Pair<String, Consumer<Map>>> dataPairs;
-
-        static {
-            dataPairs = casesOutsideDir.stream()
-                    .map(i -> Pair.of(i, EXCEPTION_OUTDIR_CONSUMER))
-                    .collect(Collectors.toList());
-
-            List<Pair<String, Consumer<Map>>> notExistingDirList = casesNotExistingDir.stream()
-                    .map(i -> Pair.of(i, EXCEPTION_NOT_FOUND_CONSUMER))
-                    .toList();
-
-            dataPairs.addAll(notExistingDirList);
-        }
-
-        @Parameterized.Parameters(name = PARAM_NAMES)
-        public static Collection<Object[]> data() {
-            return ExportCoreSecurityTest.getParameterData(dataPairs);
-        }
-
-        @Test
-        public void testsWithExportDisabled() {
-            SecurityTestUtil.testsWithExportDisabled(db, apocProcedure, fileName);
-        }
-
-        @Test
-        public void testIllegalExternalFSAccessExportWithExportAndUseNeo4jConfEnabled() {
-            // all assertions with `apoc.export.file.enabled=true` and `apoc.import.file.use_neo4j_config=true`
-
-            // apoc.import.file.allow_read_from_filesystem=false
-            setExportFileApocConfigs(true, true, false);
-            assertPathTraversalError(db, apocProcedure, Map.of("fileName", fileName), consumer);
-
-            // apoc.import.file.allow_read_from_filesystem=true
-            setExportFileApocConfigs(true, true, true);
-            assertPathTraversalError(db, apocProcedure, Map.of("fileName", fileName), consumer);
-        }
-
-        @Test
-        public void testWithUseNeo4jConfDisabled() {
-            // all assertions with `apoc.export.file.enabled=true` and `apoc.import.file.use_neo4j_config=false`
-
-            // apoc.import.file.allow_read_from_filesystem=true
-            setExportFileApocConfigs(true, false, true);
-            testWithUseNeo4jConfFalse();
-
-            // apoc.import.file.allow_read_from_filesystem=false
-            setExportFileApocConfigs(true, false, false);
-            testWithUseNeo4jConfFalse();
-        }
-
-        private void testWithUseNeo4jConfFalse() {
-            // with `apoc.import.file.use_neo4j_config=false` this file export could outside the project
-            if (fileName.equals(case26)) {
-                return;
-            }
-
-            if (casesAllowed.contains(fileName)) {
-                assertPathTraversalWithoutErrors();
-            } else {
-                assertPathTraversalError(db, apocProcedure, Map.of("fileName", fileName), EXCEPTION_NOT_FOUND_CONSUMER);
-            }
-        }
-
-        private void assertPathTraversalWithoutErrors() {
-            SecurityTestUtil.assertPathTraversalWithoutErrors(db, apocProcedure, fileName, new File("../", FILENAME));
-        }
-    }
-
-
-    /**
-     * These tests normalize the path to be within the import directory (or subdirectory) and make the file there.
-     * Some attempt to exit the directory.
-     */
-    @RunWith(Parameterized.class)
-    public static class TestPathTraversalIsNormalisedWithinDirectory {
-
-        public static final Consumer<Map> MAIN_DIR_CONSUMER = (r) -> assertTrue(((String) r.get("file")).contains("" + FILENAME));
-        public static final Consumer<Map> SUB_DIR_CONSUMER = (r) -> assertTrue(((String) r.get("file")).contains("tests/" + FILENAME));
-
-        private final String apocProcedure;
-        private final String fileName;
-        private final Consumer consumer;
-
-        public TestPathTraversalIsNormalisedWithinDirectory(String exportMethod, String exportMethodType, String exportMethodArguments,
-                                                            String fileName,
-                                                            Consumer consumer) {
-            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
-            this.fileName = fileName;
-            this.consumer = consumer;
-        }
-
-        /*
-         These tests normalize the path to be within the import directory and make the file there.
-         They result in a file being created (and deleted after).
-         */
-        private static final String case0 = "./" + FILENAME;
-
-        private static final String case1 = "file:///..//..//..//..//apoc//..//..//..//..//" + FILENAME;
-        private static final String case2 = "file:///..//..//..//..//apoc//..//" + FILENAME;
-        private static final String case3 = "file:///../import/../import//..//" + FILENAME;
-        private static final String case4 = "file://" + FILENAME;
-        private static final String case5 = "file://tests/../" + FILENAME;
-        private static final String case6 = "file:///tests//..//" + FILENAME;
-        private static final String case7 = "" + FILENAME;
-        private static final String case8 = "file:///..//..//..//..//" + FILENAME;
-
-        public static final List<String> mainDirCases = Arrays.asList(case0, case1, case2, case3, case4, case5, case6, case7, case8);
-
-        /*
-         These tests normalize the path to be within the import directory and step into a subdirectory
-         to make the file there.
-         They result in a file in the directory /tests being created (and deleted after).
-         */
-        private static final String case16 = "file:///../import/../import//..//tests/" + FILENAME;
-        private static final String case26 = "file:///..//..//..//..//apoc//..//tests/" + FILENAME;
-        private static final String case36 = "file:///../import/../import//..//tests/../tests/" + FILENAME;
-        private static final String case46 = "file:///tests/" + FILENAME;
-        private static final String case56 = "tests/" + FILENAME;
-
-        public static final List<String> subDirCases = Arrays.asList(case16, case26, case36, case46, case56);
-
-
-        @Parameterized.Parameters(name = PARAM_NAMES)
-        public static Collection<Object[]> data() {
-            List<Pair<String, Consumer<Map>>> collect = mainDirCases.stream().map(i -> Pair.of(i, MAIN_DIR_CONSUMER)).collect(Collectors.toList());
-            List<Pair<String, Consumer<Map>>> collect2 = subDirCases.stream().map(i -> Pair.of(i, SUB_DIR_CONSUMER)).toList();
-            collect.addAll(collect2);
-
-            return getParameterData(collect);
-        }
-
-        @Test
-        public void testPathTraversal() {
-            File dir = getDir();
-            setExportFileApocConfigs(true, true, false);
-
-            assertPathTraversalWithoutErrors(dir);
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(APOC_PROCEDURE_ARGUMENTS);
         }
 
         @Test
         public void testIllegalFSAccessExport() {
-            SecurityTestUtil.testsWithExportDisabled(db, apocProcedure, fileName);
+            QueryExecutionException e = Assert.assertThrows(QueryExecutionException.class,
+                    () -> TestUtil.testCall(db, "CALL " + apocProcedure, (r) -> {})
+            );
+
+            assertError(e, ApocConfig.EXPORT_TO_FILE_ERROR, RuntimeException.class, apocProcedure);
+        }
+    }
+
+    @RunWith(Parameterized.class)
+    public static class TestIllegalExternalFSAccess {
+        private final String apocProcedure;
+
+        public TestIllegalExternalFSAccess(String exportMethod, String exportMethodType, String exportMethodArguments) {
+            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
+        }
+
+        private static final Map<String, List<String>> METHOD_ARGUMENTS = Map.of(
+                "query", List.of(
+                        "\"RETURN 'hello' as key\", '../hello', {}",
+                        "\"RETURN 'hello' as key\", 'file:../hello', {}"
+                ),
+                "all", List.of(
+                        "'../hello', {}",
+                        "'file:../hello', {}"
+                ),
+                "data", List.of(
+                        "[], [], '../hello', {}",
+                        "[], [], 'file:../hello', {}"
+                ),
+                "graph", List.of(
+                        "{nodes: [], relationships: []}, '../hello', {}",
+                        "{nodes: [], relationships: []}, 'file:../hello', {}"
+                )
+        );
+
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(METHOD_ARGUMENTS);
         }
 
         @Test
-        public void testWithUseNeo4jConfDisabled() {
-            // all assertions with `apoc.export.file.enabled=true` and `apoc.import.file.use_neo4j_config=true`
-
-            File dir = getDir();
-
-            // apoc.import.file.allow_read_from_filesystem=false
-            setExportFileApocConfigs(true, true, false);
-            assertPathTraversalWithoutErrors(dir);
-
-            // apoc.import.file.allow_read_from_filesystem=true
-            setExportFileApocConfigs(true, true, true);
-            assertPathTraversalWithoutErrors(dir);
-        }
-
-        private File getDir() {
-            if (subDirCases.contains(fileName)) {
-                return subDirectory;
+        public void testIllegalExternalFSAccessExport() {
+            final String message = apocProcedure + " should throw an exception";
+            try {
+                setFileExport(true);
+                db.executeTransactionally("CALL " + apocProcedure, Map.of(),
+                        Result::resultAsString);
+                fail(message);
+            } catch (Exception e) {
+                assertError(e, FileUtils.ACCESS_OUTSIDE_DIR_ERROR, IOException.class, apocProcedure);
+            } finally {
+                setFileExport(false);
             }
-            return directory;
+        }
+    }
+
+    @RunWith(Parameterized.class)
+    public static class TestPathTraversalAccess {
+        private final String apocProcedure;
+
+        public TestPathTraversalAccess(String exportMethod, String exportMethodType, String exportMethodArguments) {
+            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
         }
 
-        private void assertPathTraversalWithoutErrors(File directory) {
-            File file = new File(directory.getAbsolutePath(), FILENAME);
-            SecurityTestUtil.assertPathTraversalWithoutErrors(db, apocProcedure, fileName, file);
+        private static final String case1 = "'file:///%2e%2e%2f%2f%2e%2e%2f%2f%2e%2e%2f%2f%2e%2e%2f%2fapoc/test.txt'";
+        private static final String case2 = "'file:///%2e%2e%2f%2ftest.txt'";
+        private static final String case3 = "'../test.txt'";
+        private static final String case4 = "'tests/../../test.txt'";
+        private static final String case5 = "'tests/..//..//test.txt'";
+
+        public static final List<String> cases = Arrays.asList(case1, case2, case3, case4, case5);
+
+        private static final Map<String, List<String>> METHOD_ARGUMENTS = Map.of(
+                "query",  cases.stream().map(
+                        filePath -> "\"RETURN 1\", " + filePath + ", {}"
+                ).toList(),
+                "all", cases.stream().map(
+                        filePath -> filePath + ", {}"
+                ).toList(),
+                "data", cases.stream().map(
+                        filePath -> "[], [], " + filePath + ", {}"
+                ).toList(),
+                "graph", cases.stream().map(
+                        filePath -> "{nodes: [], relationships: []}, " + filePath + ", {}"
+                ).toList()
+        );
+
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(METHOD_ARGUMENTS);
         }
 
-        // tests with `apoc.import.file.use_neo4j_config=false` not implemented because the results can be different
-        // e.g. based on project folder name, so the exported file can be basically everywhere
+        @Test
+        public void testPathTraversal() {
+            assertPathTraversalError(db, "CALL " + apocProcedure);
+        }
+    }
 
+    /**
+     * All of these will resolve to a local path after normalization which will point to
+     * a non-existing directory in our import folder: /apoc. Causing them to error that is
+     * not found. They all attempt to exit the import folder back to the apoc folder:
+     * Directory Layout: .../apoc/core/target/import
+     */
+    @RunWith(Parameterized.class)
+    public static class TestPathTraversalIsNormalised {
+        private final String apocProcedure;
+
+        public TestPathTraversalIsNormalised(String exportMethod, String exportMethodType, String exportMethodArguments) {
+            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
+        }
+
+        private static final String case1 = "'file://%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f/apoc/test.txt'";
+        private static final String case2 = "'file://../../../../apoc/test.txt'";
+        private static final String case3 = "'file:///..//..//..//..//apoc//core//..//test.txt'";
+        private static final String case4 = "'file:///..//..//..//..//apoc/test.txt'";
+        private static final String case5 = "'file://" + directory.getAbsolutePath() + "//..//..//..//..//apoc/test.txt'";
+        private static final String case6 = "'file:///%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f/apoc/test.txt'";
+
+        public static final List<String> cases = Arrays.asList(case1, case2, case3, case4, case5, case6);
+
+        private static final Map<String, List<String>> METHOD_ARGUMENTS = Map.of(
+                "query", cases.stream().map(
+                        filePath -> "\"RETURN 1\", " + filePath + ", {}"
+                ).toList(),
+                "all", cases.stream().map(
+                        filePath -> filePath + ", {}"
+                ).toList(),
+                "data", cases.stream().map(
+                        filePath -> "[], [], " + filePath + ", {}"
+                ).toList(),
+                "graph", cases.stream().map(
+                        filePath -> "{nodes: [], relationships: []}, " + filePath + ", {}"
+                ).toList()
+        );
+
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(METHOD_ARGUMENTS);
+        }
+
+        @Test
+        public void testPathTraversal() {
+            assertPathTraversalError(db, "CALL " + apocProcedure,
+                    e -> TestCase.assertTrue(e.getMessage().contains("apoc/test.txt (No such file or directory)"))
+            );
+        }
+    }
+
+    /**
+     * These tests normalize the path to be within the import directory and make the file there.
+     * Some attempt to exit the directory.
+     * They result in a file name test.txt being created (and deleted after).
+     */
+    @RunWith(Parameterized.class)
+    public static class TestPathTraversalIsNormalisedWithinDirectory {
+        private final String apocProcedure;
+
+        public TestPathTraversalIsNormalisedWithinDirectory(String exportMethod, String exportMethodType, String exportMethodArguments) {
+            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
+        }
+
+        private static final String case1 = "'file:///..//..//..//..//apoc//..//..//..//..//test.txt'";
+        private static final String case2 = "'file:///..//..//..//..//apoc//..//test.txt'";
+        private static final String case3 = "'file:///../import/../import//..//test.txt'";
+        private static final String case4 = "'file://test.txt'";
+        private static final String case5 = "'file://tests/../test.txt'";
+        private static final String case6 = "'file:///tests//..//test.txt'";
+        private static final String case7 = "'test.txt'";
+        private static final String case8 = "'file:///..//..//..//..//test.txt'";
+
+        public static final List<String> cases = Arrays.asList(case1, case2, case3, case4, case5, case6, case7, case8);
+
+        private static final Map<String, List<String>> METHOD_ARGUMENTS = Map.of(
+                "query", cases.stream().map(
+                        filePath -> "\"RETURN 1\", " + filePath + ", {}"
+                ).toList(),
+                "all", cases.stream().map(
+                        filePath -> filePath + ", {}"
+                ).toList(),
+                "data", cases.stream().map(
+                        filePath -> "[], [], " + filePath + ", {}"
+                ).toList(),
+                "graph", cases.stream().map(
+                        filePath -> "{nodes: [], relationships: []}, " + filePath + ", {}"
+                ).toList()
+        );
+
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(METHOD_ARGUMENTS);
+        }
+
+        @Test
+        public void testPathTraversal() {
+            assertPathTraversalWithoutErrors(db, apocProcedure, directory,
+                    (r) -> assertTrue(((String) r.get("file")).contains("test.txt")));
+
+        }
+    }
+
+    /*
+     * These test cases attempt to access a directory with the same prefix as the import directory. This is design to
+     * test "directoryName.startsWith" logic which is a common path traversal bug.
+     *
+     * All these tests should fail because they access a directory which isn't the configured directory
+     */
+    @RunWith(Parameterized.class)
+    public static class TestPathTraversalIsWithSimilarDirectoryName {
+        private final String apocProcedure;
+
+        public TestPathTraversalIsWithSimilarDirectoryName(String exportMethod, String exportMethodType, String exportMethodArguments) {
+            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
+        }
+
+        private static final String case1 = "'../imported/test.txt'";
+        private static final String case2 = "'tests/../../imported/test.txt'";
+
+        public static final List<String> cases = Arrays.asList(case1, case2);
+
+        private static final Map<String, List<String>> METHOD_ARGUMENTS = Map.of(
+                "query", cases.stream().map(
+                        filePath -> "\"RETURN 1\", " + filePath + ", {}"
+                ).toList(),
+                "all", cases.stream().map(
+                        filePath -> filePath + ", {}"
+                ).toList(),
+                "data", cases.stream().map(
+                        filePath -> "[], [], " + filePath + ", {}"
+                ).toList(),
+                "graph", cases.stream().map(
+                        filePath -> "{nodes: [], relationships: []}, " + filePath + ", {}"
+                ).toList()
+        );
+
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(METHOD_ARGUMENTS);
+        }
+
+        @Test
+        public void testPathTraversal() {
+            assertPathTraversalError(db, "CALL " + apocProcedure);
+        }
     }
 
 
+    /**
+     * These tests normalize the path to be within the import directory and step into a subdirectory
+     * to make the file there.
+     * Some attempt to exit the directory.
+     * They result in a file name test.txt in the directory /tests being created (and deleted after).
+     */
+    @RunWith(Parameterized.class)
+    public static class TestPathTraversAllowedWithinDirectory {
+        private final String apocProcedure;
+
+        public TestPathTraversAllowedWithinDirectory(String exportMethod, String exportMethodType, String exportMethodArguments) {
+            this.apocProcedure = getApocProcedure(exportMethod, exportMethodType, exportMethodArguments);
+        }
+
+        private static final String case1 = "'file:///../import/../import//..//tests/test.txt'";
+        private static final String case2 = "'file:///..//..//..//..//apoc//..//tests/test.txt'";
+        private static final String case3 = "'file:///../import/../import//..//tests/../tests/test.txt'";
+        private static final String case4 = "'file:///tests/test.txt'";
+        private static final String case5 = "'tests/test.txt'";
+
+        public static final List<String> cases = Arrays.asList(case1, case2, case3, case4, case5);
+
+        private static final Map<String, List<String>> METHOD_ARGUMENTS = Map.of(
+                "query", cases.stream().map(
+                        filePath -> "\"RETURN 1\", " + filePath + ", {}"
+                ).toList(),
+                "all", cases.stream().map(
+                        filePath -> filePath + ", {}"
+                ).toList(),
+                "data", cases.stream().map(
+                        filePath -> "[], [], " + filePath + ", {}"
+                ).toList(),
+                "graph", cases.stream().map(
+                        filePath -> "{nodes: [], relationships: []}, " + filePath + ", {}"
+                ).toList()
+        );
+
+        @Parameterized.Parameters
+        public static Collection<String[]> data() {
+            return ExportCoreSecurityTest.data(METHOD_ARGUMENTS);
+        }
+
+        @Test
+        public void testPathTraversal() {
+            assertPathTraversalWithoutErrors(db, apocProcedure, subDirectory,
+                    (r) -> assertTrue(((String) r.get("file")).contains("tests/test.txt")));
+        }
+    }
 
     public static class TestCypherSchema {
-        private final String apocProcedure = "CALL apoc.export.cypher.schema(%s)";
+        private final String apocProcedure = "apoc.export.cypher.schema(%s)";
 
         @Test
         public void testIllegalFSAccessExportCypherSchema() {
-            setFileExport(false);
             QueryExecutionException e = Assert.assertThrows(QueryExecutionException.class,
-                    () -> TestUtil.testCall(db, String.format(apocProcedure, "'./hello', {}"), (r) -> {
-                    })
+                    () -> TestUtil.testCall(db, String.format("CALL " + apocProcedure, "'./hello', {}"), (r) -> {})
             );
             assertError(e, ApocConfig.EXPORT_TO_FILE_ERROR, RuntimeException.class, apocProcedure);
         }
 
         @Test
         public void testIllegalExternalFSAccessExportCypherSchema() {
-            setFileExport(true);
-            assertPathTraversalError(db, String.format(apocProcedure, "'../hello', {}"), Map.of(),
-                    e -> assertError((Exception) e.get(ERROR_KEY), FileUtils.ACCESS_OUTSIDE_DIR_ERROR, IOException.class, (String) e.get(PROCEDURE_KEY)));
+            assertPathTraversalError(db, String.format("CALL " + apocProcedure, "'../hello', {}"),
+                    e -> assertError(e, FileUtils.ACCESS_OUTSIDE_DIR_ERROR, IOException.class, apocProcedure));
         }
     }
+
+    public static String getApocProcedure(String exportMethod, String exportMethodType, String exportMethodArguments) {
+        return "apoc.export." + exportMethod + "." + exportMethodType + "(" + exportMethodArguments + ")";
+    }
+
+    public static void assertPathTraversalError(GraphDatabaseService db, String query, Consumer<Exception> exceptionConsumer) {
+        setFileExport(true);
+
+        QueryExecutionException e = Assert.assertThrows(QueryExecutionException.class,
+                () -> TestUtil.testCall(db, query, (r) -> {})
+        );
+
+        exceptionConsumer.accept(e);
+
+        setFileExport(false);
+    }
+
+    public static void assertPathTraversalWithoutErrors(GraphDatabaseService db, String apocProcedure, File directory, Consumer<Map<String, Object>> consumer) {
+        setFileExport(true);
+
+        TestUtil.testCall(db, "CALL " + apocProcedure, consumer);
+
+        File f = new File(directory.getAbsolutePath() + "/test.txt");
+        TestCase.assertTrue(f.exists());
+        TestCase.assertTrue(f.delete());
+    }
+
+    public static void assertPathTraversalError(GraphDatabaseService db, String apocProcedure) {
+        assertPathTraversalError(db, apocProcedure,
+                e -> assertError(e, FileUtils.ACCESS_OUTSIDE_DIR_ERROR, IOException.class, apocProcedure)
+        );
+    }
+
 }
